# django-marina

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  .travis.yml  AGENTS.md  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  coverage.xml  environment.py  fabfile.py  justfile  noxfile.py  pyproject.toml  requirements-dev.txt  requirements-test.txt  runtests.py  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yaml  ci.yml  qa.yml  release.yml  test.yml
docs/: Makefile  conf.py  db.rst  index.rst  make.bat  requirements.txt  test.rst
example/: README.md
requirements/: dev.txt  docs.txt  test-static.txt  test.txt
src/django_marina/: __about__.py  __init__.py  html.py
src/django_marina/db/: __init__.py  migrations.py  models.py
src/django_marina/test/: __init__.py  clients.py  runners.py  test_cases.py
src/marina/db/: models.py  settings.py
src/marina/test/: clients.py  test_cases.py  testcases.py
tests/: models.py  smoke_test.py  test_db.py  test_extended_client.py  test_extended_test_case.py  test_html.py  test_imports.py  test_temp_media_runner.py  test_test.py  test_test_cases.py  test_version.py  urls.py
tests/app/: settings.py  urls.py  views.py
