[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target_version = ["py37", "py38", "py39", "py310", "py311"]

[tool.coverage.run]
branch = true
source = ["django_marina"]

[tool.coverage.paths]
source = ["src", ".tox/*/site-packages"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
target-version = "py37"
line-length = 120
exclude = [
    "dist",
]
select = [
    "D",     # pydocstyle
    "F",     # flake8
    "I001",  # isort (sorting)
    "UP",    # pyupgrade
]
ignore = [
    "D1",    # D1: Missing docstring error codes (because not every function and class has a docstring)
    "D203",  # D203: 1 blank line required before class docstring (conflicts with D211 and should be disabled, see https://github.com/PyCQA/pydocstyle/pull/91)
    "D212",  # D212: Multi-line docstring summary should start at the first line
    "D301",  # D301: Use r”“” if any backslashes in a docstring (unclear how else to handle backslashes in docstrings)
]

fix = false
fixable = [
    "I001",  # isort (sorting)
    "F401",  # flake8 (unused imports)
    "D",     # docformatter
    "UP",    # pyupgrade
]

[tool.ruff.isort]
known-first-party = ["django_marina"]
known-third-party = ["django"]
