[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[coverage:report]
fail_under = 100

[flake8]
exclude = locale,__pycache__,.pyc,templates
max-complexity = 10
max-line-length = 88

[isort]
multi_line_output = 3
lines_after_imports = 2
include_trailing_comma = True
force_grid_wrap = 0
combine_as_imports = True
line_length = 88
known_first_party = marina
known_third_party = django,model_mommy
