[metadata]
name = django-marina
version = 2.0.0
description = Django extensions by Zostera
long_description = file: README.md
url = https://github.com/zostera/django-bootstrap
keywords = django-marina, django, marina
license = BSD 3-Clause License
classifiers=
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Utilities

[options]
zip_safe = False
package_dir =
    = src
packages = find:

[options.packages.find]
where = src

[build-system]
requires = ["setuptools >= 40.9.0",  "wheel"]
build-backend = "setuptools.build_meta"
