[metadata]
name = django-marina
version = 2.0.0
author = Dylan Verheul
author_email = dylan@dyve.net
description = Django extensions by Zostera
long_description = file: README.md
url = https://github.com/zostera/django-bootstrap
keywords = django-marina, django, marina
license = BSD 3-Clause License
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Utilities

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.6
package_dir =
    = src
packages = find:
install_requires =
    django >= 2.2
    beautifulsoup4 >= 4.8.0
    importlib-metadata; python_version < '3.8'

[options.packages.find]
where = src
